complete word-wrap fix

--- a/SCSS/_utils.scss
+++ b/SCSS/_utils.scss
@@ -18,6 +18,7 @@ span {
 }
 .word {
   display: inline-block;
+  white-space: nowrap; /* this does the trick */
 }
 a {
   text-decoration: none;
